# sae-eap

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
docs/: setup.md
examples/: eap_demo.py  greater_than.ipynb  leap_demo.ipynb  leap_demo.py  print_dataset.py  splicing_model_with_all_saes.py  splicing_model_with_resid_and_attn_saes.py  walkthrough.ipynb
examples/eap_ig/: README.md  eap_ig_scores_gt_orig.pkl  graph.json  greater_than.ipynb  walkthrough.ipynb
notebooks/: attribute.ipynb  test_our_attrib_matches_original.ipynb
sae_eap/: ablate.py  attribute.py  cache.py  prune.py  runner.py  utils.py
sae_eap/core/: constants.py  patterns.py  types.py
sae_eap/data/: gt.py  handler.py  ioi.py
sae_eap/eap/: evaluate_graph.py  graph.py  visualization.py
sae_eap/graph/: __init__.py  build.py  edge.py  graph.py  index.py  node.py  prune.py  viz.py
sae_eap/model/: load_pretrained.py
sae_eap/pretrained/: __init__.py  load_attn_saes.py  load_mlp_transcoders.py  load_model.py  load_resid_saes.py  utils.py
sae_eap/sae/: __init__.py  hooked_sae.py  hooked_sae_config.py  hooked_sae_transformer.py  hooked_transcoder.py  hooked_transcoder_config.py  types.py
tests/: conftest.py  helpers.py  test_init.py
tests/acceptance/: test_gpt2_small_single_prompt.py
tests/pretrained/: test_load_attn_saes.py  test_load_mlp_transcoders.py  test_load_resid_saes.py
tests/sae/: test_hooked_sae.py  test_hooked_transcoder.py
tests/unit/: conftest.py  helpers.py  test_attribute.py  test_prune.py  (+1 more)
(+18 files in other folders)
