[project]
name = "sae-eap"
version = "0.1.0"
description = "EAP for SAEs"
authors = [{ name = "Daniel Tan", email = "dtch1997@users.noreply.github.com" }]
dependencies = [
    "pre-commit>=3.7.1",
    "transformer-lens<2.0.0",
    "transcoders-slim>=0.2.1",
    "sae-lens>=3.3.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = ["ruff>=0.4.3", "pytest>=8.2.0", "pyright>=1.1.361"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 88
lint.select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I",
]
exclude = ["third_party", ".venv"]
lint.ignore = ["F841", "E501", "E741", "I001", "E731", "F722"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["sae_eap"]
force-single-line = true
single-line-exclusions = ["typing"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["sae_eap"]

[tool.semantic_release]
version_variables = [
    "sae_eap/__init__.py:__version__",
    "pyproject.toml:version",
]
branch = "main"
